--- a/index.html
+++ b/index.html
@@ -1,1 +1,221 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container header-container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#summary" class="nav-link">Summary</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#code" class="nav-link">Code</a>
+            </li>
+            <li class="nav-item">
+              <a href="#courses" class="nav-link">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#education" class="nav-link">Education</a>
+            </li>
+            <li class="nav-item">
+              <a href="#languages" class="nav-link">Languages</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="container main-container">
+        <section class="section" id="profile">
+          <img
+            src="./assets/avatar.jpg"
+            alt="profile photo"
+            class="section-profile-logo"
+          />
+          <div class="section-profile-title">
+            <h1 class="section-title">Maria Nerobelova</h1>
+            <h3 class="section-subtitle">Junior Front-End developer</h3>
+          </div>
+        </section>
+        <section class="section" id="contacts">
+          <h2 class="section-title">Contacts</h2>
+          <ul class="section-list">
+            <li class="section-item contacts-item">
+              Location: St.Petersburg, Russia
+            </li>
+            <li class="section-item contacts-item">
+              Email:
+              <a href="mailto:marianerobelova@gmail.com" title="Email"
+                >marianerobelova@gmail.com</a
+              >
+            </li>
+            <li class="section-item contacts-item">
+              Github:
+              <a href="https://github.com/marianerobelova" title="Github"
+                >marianerobelova</a
+              >
+            </li>
+            <li class="section-item contacts-item">
+              Telegram:
+              <a href="https://t.me/marianerobelova" title="Telegram"
+                >@marianerobelova</a
+              >
+            </li>
+            <li class="section-item contacts-item">
+              Discord:
+              <a href="https://discord.com/channels/@me" title="Discord"
+                >marianerobelova#3401</a
+              >
+            </li>
+            <li class="section-item contacts-item">
+              LinkedIn:
+              <a
+                href="https://www.linkedin.com/in/marianerobelova/"
+                title="LinkedIn"
+                >marianerobelova</a
+              >
+            </li>
+            <li class="section-item contacts-item">
+              Codewars:
+              <a
+                href="https://www.codewars.com/users/marianerobelova"
+                title="Codewars"
+                >marianerobelova</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="summary">
+          <h2 class="section-title">Summary</h2>
+          <p>
+            Highly interested Front-End development and skilled in IT
+            recruitment. Person with strong knowledge of office administration,
+            excellent organizational skills, analytical thinking, computer
+            proficiency and communication abilities.
+          </p>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title">Skills</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              Web-development:<span> HTML5, CSS3, JavaScript</span>
+            </li>
+            <li class="section-item">
+              Frameworks and libraries:<span> React, Redux</span>
+            </li>
+            <li class="section-item">
+              Version control:<span> GIT, Github</span>
+            </li>
+            <li class="section-item">
+              Graphics:<span> Adobe Illustrator</span>
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="code">
+          <h2 class="section-title">Code</h2>
+          <pre class="pre"><code>function highAndLow(numbers){
+            const numbersArray = numbers.split(' ');
+            const sortedArray = numbersArray.sort((a, b) => {
+              return b - a;
+            });
+            return `${sortedArray[0]} ${sortedArray[sortedArray.length - 1]}`;
+          }
+          }</code></pre>
+        </section>
+        <section class="section" id="courses">
+          <h2 class="section-title">Courses</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              Frontend developer, <span>Vladilen Minin</span>
+            </li>
+            <li class="section-item">IT Recruiter, <span>LABA</span></li>
+            <li class="section-item">
+              60-hour-language-course in Spanish,
+              <span>University of Valencia</span>
+            </li>
+            <li class="section-item">
+              Secretarial and office management,
+              <span>Inter-school study centre, Ivanovo</span>
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="projects">
+          <h2 class="section-title">Projects</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <a href="https://marianerobelova.github.io/rsschool-cv/"
+                >My first CV project on Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="education">
+          <h2 class="section-title">Education</h2>
+          <p>
+            The Russian Presidential academy of national economy and public
+            administration
+          </p>
+          <ul class="section-list">
+            <li class="section-item">
+              Bachelor of public administration and civil service
+            </li>
+            <li class="section-item">Graduated with honors</li>
+            <li class="section-item">
+              Winner, 2019, All-Russian essay contest "Growth point" of the
+              Federal Antimonopoly Service, "Unfair competition on electronic
+              platforms and the struggle against it"
+            </li>
+            <li class="section-item">
+              Winner, 2018, Russia-UK student economic forum
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="languages">
+          <h2 class="section-title">Languages</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              English - <span>B1 (intermediate)</span>
+            </li>
+            <li class="section-item">
+              Spanish - <span>A2 (pre-intermediate)</span>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="container footer-container">
+        <div>
+          © 2022
+          <a href="https://github.com/marianerobelova" class="github nav-link"
+            >marianerobelova</a
+          >
+        </div>
+        <a href="https://rs.school/js/" class="rss">RS School</a>
+      </div>
+    </footer>
+    <script src="index.js"></script>
+  </body>
+</html>
