feat: update cv

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           />
           <h1 class="section-profile-title">Maria Nerobelova</h1>
           <p>Junior front-end developer</p>
-          <p>St.Petersburg, Russia</p>
+          <p class="location">St.Petersburg, Russia</p>
         </section>
         <section class="section" id="contacts">
           <div class="section-left">
