fix: change self-closing elements

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
@@ -154,13 +154,13 @@
               const whatTimeIsIt = function(angle) {
 
                 const addZero = function(n) {
-                  if (n < 10) {
+                  if (n &lt; 10) {
                     return '0' + n;
                   } else {return +n};
                 };
                 
                 let hours = addZero(Math.floor(angle / 30));
-                if (angle < 30) {
+                if (angle &lt; 30) {
                   hours = '12';
                 };
                 
@@ -282,8 +282,7 @@
             <img
               src="./assets/svg/rs_school_js.svg"
               alt="RS"
-              class="rss-logo"
-            />
+              class="rss-logo">
           </a>
         </div>
       </div>
