fix: remove Trailing whitespace

--- a/index.html
+++ b/index.html
@@ -71,42 +71,36 @@
               <li class="section-item contacts-item">
                 Email:
                 <a href="mailto:marianerobelova@gmail.com" title="Email"
-                  >marianerobelova@gmail.com</a
-                >
+                  >marianerobelova@gmail.com</a>
               </li>
               <li class="section-item contacts-item">
                 Github:
                 <a href="https://github.com/marianerobelova" title="Github"
-                  >marianerobelova</a
-                >
+                  >marianerobelova</a>
               </li>
               <li class="section-item contacts-item">
                 Telegram:
                 <a href="https://t.me/marianerobelova" title="Telegram"
-                  >@marianerobelova</a
-                >
+                  >@marianerobelova</a>
               </li>
               <li class="section-item contacts-item">
                 Discord:
                 <a href="https://discord.com/channels/@me" title="Discord"
-                  >marianerobelova#3401</a
-                >
+                  >marianerobelova#3401</a>
               </li>
               <li class="section-item contacts-item">
                 LinkedIn:
                 <a
                   href="https://www.linkedin.com/in/marianerobelova/"
                   title="LinkedIn"
-                  >marianerobelova</a
-                >
+                  >marianerobelova</a>
               </li>
               <li class="section-item contacts-item">
                 Codewars:
                 <a
                   href="https://www.codewars.com/users/marianerobelova"
                   title="Codewars"
-                  >marianerobelova</a
-                >
+                  >marianerobelova</a>
               </li>
             </ul>
           </div>
@@ -210,14 +204,12 @@
               </li>
               <li class="section-item projects">
                 <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/Plants/"
-                  >Plants task from RSSchool #Stage0</a
-                >
+                  >Plants task from RSSchool #Stage0</a>
                 <img class="screen" src="/assets/plants screen.png" alt="screenshoot of plants project">
               </li>
               <li class="section-item projects">
                 <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/momentum/"
-                  >Momentum task from RSSchool #Stage0</a
-                >
+                  >Momentum task from RSSchool #Stage0</a>
                 <img class="screen" src="/assets/momentum screen.png" alt="screenshoot of momentum project">
               </li>
             </ul>
@@ -274,8 +266,7 @@
         <div class="footer-item">2022</div>
         <div class="footer-item">
           <a href="https://github.com/marianerobelova" class="github nav-link"
-            >marianerobelova</a
-          >
+            >marianerobelova</a>
         </div>
         <div class="footer-item">
           <a href="https://rs.school/js/" class="rss-link">
