--- a/index.html
+++ b/index.html
@@ -198,18 +198,15 @@
             <ul class="section-list">
               <li class="section-item projects">
                 <a href="https://marianerobelova.github.io/rsschool-cv/"
-                  >My CV project</a
-                >
+                  >My CV project</a>
                 <img class="screen" src="/assets/cv-screen.png" alt="screenshoot of cv project">
               </li>
               <li class="section-item projects">
-                <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/Plants/"
-                  >Plants task from RSSchool #Stage0</a>
+                <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/Plants/">Plants task from RSSchool #Stage0</a>
                 <img class="screen" src="/assets/plants-screen.png" alt="screenshoot of plants project">
               </li>
               <li class="section-item projects">
-                <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/momentum/"
-                  >Momentum task from RSSchool #Stage0</a>
+                <a href="https://rolling-scopes-school.github.io/marianerobelova-JSFEPRESCHOOL2022Q4/momentum/">Momentum task from RSSchool #Stage0</a>
                 <img class="screen" src="/assets/momentum-screen.png" alt="screenshoot of momentum project">
               </li>
             </ul>
@@ -265,8 +262,7 @@
       <div class="container footer-container">
         <div class="footer-item">2022</div>
         <div class="footer-item">
-          <a href="https://github.com/marianerobelova" class="github nav-link"
-            >marianerobelova</a>
+          <a href="https://github.com/marianerobelova" class="github nav-link">marianerobelova</a>
         </div>
         <div class="footer-item">
           <a href="https://rs.school/js/" class="rss-link">
